--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
+  <package id="Dapper" version="2.0.78" targetFramework="net472" />
+  <package id="Dapper.Oracle" version="2.0.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net472" />
@@ -19,5 +21,7 @@
   <package id="NLog" version="4.7.5" targetFramework="net472" />
   <package id="NLog.Config" version="4.7.5" targetFramework="net472" />
   <package id="NLog.Schema" version="4.7.5" targetFramework="net472" />
+  <package id="Oracle.ManagedDataAccess" version="19.10.0" targetFramework="net472" />
+  <package id="Oracle.ManagedDataAccess.EntityFramework" version="19.7.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
